--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
       <org.aspectj-version>1.6.10</org.aspectj-version>
       <org.slf4j-version>1.6.6</org.slf4j-version>
    </properties>
-   
+
    	  <!-- 결제 저장소 -->
       <repositories>
       <repository>
@@ -22,10 +22,9 @@
           <url>https://jitpack.io</url>
       </repository>
    </repositories>
-   
-   
+
+
    <dependencies>
-   	
       <!-- Spring -->
       <dependency>
          <groupId>org.springframework</groupId>
@@ -206,28 +205,28 @@
          <version>1.3.2</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<!--      &lt;!&ndash; https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload &ndash;&gt;-->
       <dependency>
          <groupId>commons-fileupload</groupId>
          <artifactId>commons-fileupload</artifactId>
          <version>1.3.2</version>
       </dependency>
-	  
+
 	  <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.15.2</version>
 		</dependency>
-	  
+
 	  <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-	  
-	  
+
+
       <!-- validation -->
 
       <dependency>
@@ -265,19 +264,19 @@
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-      <dependency>
-         <groupId>commons-io</groupId>
-         <artifactId>commons-io</artifactId>
-         <version>2.4</version>
-      </dependency>
-      
-      
-      <!-- https://mvnrepository.com/artifact/servlets.com/cos -->
-      <dependency>
-         <groupId>servlets.com</groupId>
-         <artifactId>cos</artifactId>
-         <version>05Nov2002</version>
-      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>commons-io</groupId>-->
+<!--         <artifactId>commons-io</artifactId>-->
+<!--         <version>2.4</version>-->
+<!--      </dependency>-->
+
+
+<!--      &lt;!&ndash; https://mvnrepository.com/artifact/servlets.com/cos &ndash;&gt;-->
+<!--      <dependency>-->
+<!--         <groupId>servlets.com</groupId>-->
+<!--         <artifactId>cos</artifactId>-->
+<!--         <version>05Nov2002</version>-->
+<!--      </dependency>-->
 
 
       <dependency>
@@ -285,27 +284,13 @@
           <artifactId>iamport-rest-client-java</artifactId>
           <version>0.2.17</version>
       </dependency>
-   
-   
+
+
 </dependencies>
 
 
    <build>
       <plugins>
-         <plugin>
-            <artifactId>maven-eclipse-plugin</artifactId>
-            <version>2.9</version>
-            <configuration>
-               <additionalProjectnatures>
-                  <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-               </additionalProjectnatures>
-               <additionalBuildcommands>
-                  <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
-               </additionalBuildcommands>
-               <downloadSources>true</downloadSources>
-               <downloadJavadocs>true</downloadJavadocs>
-            </configuration>
-         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -317,14 +302,6 @@
                <annotationProcessors>
                   <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
                </annotationProcessors>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.2.1</version>
-            <configuration>
-               <mainClass>org.test.int1.Main</mainClass>
             </configuration>
          </plugin>
       </plugins>
