--- a/pom.xml
+++ b/pom.xml
@@ -8,90 +8,57 @@
    <name>joinus</name>
    <packaging>war</packaging>
    <version>1.0.0-BUILD-SNAPSHOT</version>
+   <parent>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>1.4.6.RELEASE</version>
+      <relativePath/>
+   </parent>
    <properties>
       <java-version>1.8</java-version>
-      <org.springframework-version>4.3.8.RELEASE</org.springframework-version>
-      <org.aspectj-version>1.6.10</org.aspectj-version>
-      <org.slf4j-version>1.6.6</org.slf4j-version>
    </properties>
 
-   	  <!-- 결제 저장소 -->
-      <repositories>
+   <!-- 결제 저장소 -->
+   <repositories>
       <repository>
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
    </repositories>
 
-
    <dependencies>
-      <!-- Spring -->
+
       <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-context</artifactId>
-         <version>${org.springframework-version}</version>
-         <exclusions>
-            <!-- Exclude Commons Logging in favor of SLF4j -->
-            <exclusion>
-               <groupId>commons-logging</groupId>
-               <artifactId>commons-logging</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-webmvc</artifactId>
-         <version>${org.springframework-version}</version>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
 
-      <!-- AspectJ -->
       <dependency>
-         <groupId>org.aspectj</groupId>
-         <artifactId>aspectjrt</artifactId>
-         <version>${org.aspectj-version}</version>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-mail</artifactId>
       </dependency>
 
-      <!-- Logging -->
       <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
-         <version>${org.slf4j-version}</version>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-jdbc</artifactId>
       </dependency>
+
       <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>jcl-over-slf4j</artifactId>
-         <version>${org.slf4j-version}</version>
-         <scope>runtime</scope>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-test</artifactId>
+         <scope>test</scope>
       </dependency>
+
       <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-log4j12</artifactId>
-         <version>${org.slf4j-version}</version>
-         <scope>runtime</scope>
+         <groupId>org.mybatis.spring.boot</groupId>
+         <artifactId>mybatis-spring-boot-starter</artifactId>
+         <version>1.2.2</version>
       </dependency>
+
       <dependency>
-         <groupId>log4j</groupId>
-         <artifactId>log4j</artifactId>
-         <version>1.2.15</version>
-         <exclusions>
-            <exclusion>
-               <groupId>javax.mail</groupId>
-               <artifactId>mail</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>javax.jms</groupId>
-               <artifactId>jms</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>com.sun.jdmk</groupId>
-               <artifactId>jmxtools</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>com.sun.jmx</groupId>
-               <artifactId>jmxri</artifactId>
-            </exclusion>
-         </exclusions>
-         <scope>runtime</scope>
+         <groupId>org.apache.tomcat.embed</groupId>
+         <artifactId>tomcat-embed-jasper</artifactId>
+         <scope>provided</scope>
       </dependency>
 
       <!-- @Inject -->
@@ -101,30 +68,9 @@
          <version>1</version>
       </dependency>
 
-      <!-- Servlet -->
-      <dependency>
-         <groupId>javax.servlet</groupId>
-         <artifactId>javax.servlet-api</artifactId>
-         <version>3.1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>javax.servlet.jsp</groupId>
-         <artifactId>jsp-api</artifactId>
-         <version>2.1</version>
-         <scope>provided</scope>
-      </dependency>
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>jstl</artifactId>
-         <version>1.2</version>
-      </dependency>
-
-      <!-- Test -->
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.12</version>
-         <scope>test</scope>
       </dependency>
 
       <!-- 외부 라이브러리 추가 -->
@@ -135,53 +81,11 @@
          <version>8.0.28</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-      <dependency>
-         <groupId>org.mybatis</groupId>
-         <artifactId>mybatis</artifactId>
-         <version>3.4.1</version>
-      </dependency>
-
-      <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
-      <dependency>
-         <groupId>org.mybatis</groupId>
-         <artifactId>mybatis-spring</artifactId>
-         <version>1.3.0</version>
-      </dependency>
-
-      <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-jdbc</artifactId>
-         <version>${org.springframework-version}</version>
-      </dependency>
-
-      <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-test</artifactId>
-         <version>${org.springframework-version}</version>
-      </dependency>
-
-      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-      <dependency>
-         <groupId>com.fasterxml.jackson.core</groupId>
-         <artifactId>jackson-databind</artifactId>
-         <version>2.8.4</version>
-      </dependency>
       <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.24</version>
          <scope>provided</scope>
-      </dependency>
-
-
-      <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
-      <dependency>
-         <groupId>org.bgee.log4jdbc-log4j2</groupId>
-         <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
-         <version>1.16</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-apis -->
@@ -220,48 +124,13 @@
 			<version>1.1.1</version>
 		</dependency>
 
-
-      <!-- validation -->
-
-      <dependency>
-         <groupId>javax.validation</groupId>
-         <artifactId>validation-api</artifactId>
-         <version>1.0.0.GA</version>
-      </dependency>
-
-      <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-validator</artifactId>
-         <version>4.2.0.Final</version>
-      </dependency>
-
-
-      <!-- 메일 api -->
-
-      <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-      <dependency>
-         <groupId>javax.mail</groupId>
-         <artifactId>mail</artifactId>
-         <version>1.4.7</version>
-      </dependency>
-
-      <!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-context-support</artifactId>
-         <version>${org.springframework-version}</version>
-      </dependency>
-
-
       <dependency>
           <groupId>com.github.iamport</groupId>
           <artifactId>iamport-rest-client-java</artifactId>
           <version>0.2.17</version>
       </dependency>
 
-
-</dependencies>
-
+   </dependencies>
 
    <build>
       <plugins>
@@ -280,4 +149,5 @@
          </plugin>
       </plugins>
    </build>
+
 </project>
