--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.4.6.RELEASE</version>
+      <version>1.4.7.RELEASE</version>
       <relativePath/>
    </parent>
    <properties>
-      <java-version>1.8</java-version>
+      <java.version>1.8</java.version>
    </properties>
 
    <!-- 결제 저장소 -->
@@ -128,17 +128,8 @@
    <build>
       <plugins>
          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.2</version>
-            <configuration>
-               <source>1.8</source>
-               <target>1.8</target>
-               <encoding>UTF-8</encoding>
-               <annotationProcessors>
-                  <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
-               </annotationProcessors>
-            </configuration>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
          </plugin>
       </plugins>
    </build>
