--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 mybatis.mapper-locations=classpath:mappers/**/*Mapper.xml
 mybatis.type-aliases-package=com.joinus.domain
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
